--- a/css/styles.css
+++ b/css/styles.css
@@ -39,19 +39,27 @@ body {
   max-width: 1046px;
   width: 100%;
   border-radius: 12px;
-  padding: 23px 23px 23px 23px;
+  padding: 22px 20.43px 22.86px 25.54px;
   background-color: var(--white);
   margin: 0 auto;
+}
+.img-profile-div {
+  max-height: 266.14px;
+  height: 100%;
 }
 .image-profile {
   max-width: 271.86px;
   width: 100%;
   border-radius: 12px;
 }
+.profile-right {
+  max-width: 693.76px;
+  width: 100%;
+}
 .profile-tight-top {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 41px;
+  margin-bottom: 37px;
 }
 .name {
   font-size: 24px;
@@ -59,6 +67,8 @@ body {
   line-height: 29.26px;
   color: var(--principal-text);
 }
+
+
 .dev {
   font-size: 18px;
   font-weight: 500;
@@ -66,7 +76,6 @@ body {
   color: var(--secundary-text);
   margin-top: 6.27px;
 }
-
 .icon {
   width: 20px;
 }
@@ -99,8 +108,7 @@ body {
   display: flex;
   justify-content: space-between;
   gap: 34.98px;
-  margin: 0 auto 42px auto;
-  padding-top: 42px;
+  margin: 42px auto 42px auto;
 }
 .mid-left {
   display: flex;
@@ -111,7 +119,7 @@ body {
   height: 100%;
   max-width: 415.02px;
   width: 100%;
-  padding: 23px 23px 25.61px 23px;
+  padding: 23.47px 23.47px 25.61px ;
   border-radius: 12px;
   background-color: var(--white);
 }
@@ -142,8 +150,8 @@ h2 {
 .level {
   display: flex;
   flex-direction: column;
-  gap: 27.5px;
-  margin-top: 0.4px;
+  gap: 27.2px;
+  margin-top: 0px;
 }
 .levels {
   height: 9.6px;
@@ -198,7 +206,9 @@ h2 {
 }
 .blog-img {
   max-height: 321px;
-  max-width: 396px;
+  height: 100%;
+  max-width: 359px;
+  width: 100%;
   border-radius: 12px 0 0 12px;
   margin-top: 16px;
 }
@@ -222,7 +232,7 @@ h2 {
 
 .expeciences {
   border-radius: 12px;
-  padding: 17px 31.23px 33px 31.23px;
+  padding: 17px 31.23px 38px 31.23px;
   background-color: var(--white);
 }
 .h3-experiences {
@@ -237,7 +247,7 @@ h2 {
   gap: 22.71px;
 }
 .xp-two {
-  margin-top: 36px;
+  margin-top: 55.5px;
 }
 .exp-img {
   height: 84px;
@@ -320,6 +330,7 @@ h2 {
   padding: 22px;
   border-radius: 12px;
   background-color: var(--white);
+  margin-bottom: 36px;
 }
 .h3-projects {
   font-size: 18px;
@@ -343,12 +354,83 @@ h2 {
 }
 .whit:hover , 
 .whit:focus{
+  transition: 0.3s;
   color: var(--white);
   border-color: var(--blue);
   background-color: var(--blue);
 }
 
 
-@media screen and (max-width: 996px) {
+.card-projects {
+  display: flex;
+  justify-content: space-between;
+}
+.card {
+  border-radius: 12px;
+  background-color: var(--white);
+  padding: 18px 18.49px 33px;
+}
+.img-project {
+  max-width: 292px;
+  width: 100%;
+  border-radius: 12px;
+}
+.tags {
+  display: flex;
+  gap: 9px;
+  margin: 24px 0 22px 0;
+}
+.tag {
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 19.5px;
+  color: var(--principal-text);
+}
+.card-text {
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 19.5px;
+  max-width: 292px;
+  color: var(--secundary-text);
+  margin: 18px 0 54px;
+}
+.buttons {
+  display: flex;
+  justify-content: space-between;
+}
+.card-button {
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 21.94px; 
+  text-decoration: none;
+  padding: 12px 35px;
+  border-radius: 12px;
+}
+.cd-blue {
+  color: var(--white);
+  background-color: var(--blue);
+}
+.cd-white {
+  border: 1px solid var(--blue);
+  color: var(--blue);
+}
+
+
+
+.created {
+  text-align: center;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 17.07px;
+  color: var(--secundary-text);
+  margin-bottom: 24px;
+}
+.iam {
+  font-weight: 700;
+  text-decoration: none;
+  color: var(--secundary-text);
+}
+
+@media screen and (max-width: 1014px) {
   
 }
