--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,7 @@ body {
 }
 .profile-card {
   display: flex;
+  justify-content: space-between;
   gap: 33.57px;
   height: 100%;
   max-width: 1046px;
@@ -42,6 +43,7 @@ body {
   padding: 22px 20.43px 22.86px 25.54px;
   background-color: var(--white);
   margin: 0 auto;
+  transition: 1s;
 }
 .img-profile-div {
   max-height: 266.14px;
@@ -67,8 +69,6 @@ body {
   line-height: 29.26px;
   color: var(--principal-text);
 }
-
-
 .dev {
   font-size: 18px;
   font-weight: 500;
@@ -330,7 +330,6 @@ h2 {
   padding: 22px;
   border-radius: 12px;
   background-color: var(--white);
-  margin-bottom: 36px;
 }
 .h3-projects {
   font-size: 18px;
@@ -364,7 +363,7 @@ h2 {
 .card-projects {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 36px;
+  margin: 36px 0;
 }
 .card {
   border-radius: 12px;
@@ -453,6 +452,255 @@ h2 {
   color: var(--secundary-text);
 }
 
-@media screen and (max-width: 1014px) {
+
+
+
+
+
+@media screen and (max-width: 1099px) {
+  body {
+    padding: 0 20px;
+  }
+
+  /* ----------top------------- */
+  .top {
+    max-width: 660px;
+    width: 100%;
+    margin: 0 auto;
+    padding-top: 20px;
+  }
+  .profile-card {
+    gap: 20px;
+    max-width: 660px;
+    padding: 20px;
+    transition: 1s;
+  }
+  .image-profile {
+    max-width: 150px;
+  }
+  .profile-right {
+    max-width: 450px;
+  }
+  .profile-tight-top {
+    justify-content: space-between;
+    margin-bottom: 20px;
+  }
+  .name {
+    font-size: 20px;
+    line-height: normal;
+  }
+  .dev {
+    font-size: 14px;
+    line-height: normal;
+    margin-top: 0px;
+  }
+  .icon {
+    width: 16px;
+  }
+  .email , .phone {
+    display: flex;
+    gap: 10px;
+    font-size: 14px;
+    line-height: normal;
+  }
+  .email {
+    margin-bottom: 5px;
+  }
+  .introducing {
+    font-size: 14px;
+    line-height: normal;
+    max-width: 450px;
+  }
+  .int-two {
+    margin-top: 10px;
+  }
+
+
+
+/* ----------mid------------- */
+  .mid {
+    max-width: 660px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+    margin: 20px auto;
+  }
+
+  /* -----mid left-----*/
+  .mid-left {
+    display: flex;
+    gap: 20px;
+    flex-direction: column;
+  }
+  .frontend-card {
+    max-height: 233px;
+    height: 100%;
+    max-width: 415.02px;
+    width: 100%;
+    padding: 20px;
+    border-radius: 12px;
+    background-color: var(--white);
+  }
+  h2 {
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 21.94px;
+    color: var(--principal-text);
+  }
+  .skills {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 20px;
+    margin-top: 17.07px ;
+  }
+  .technologys {
+    gap: 13px;
+  }
+  .tech {
+    font-size: 12px;
+    line-height: normal;
+  }
+  .level {
+    display: flex;
+    flex-direction: column;
+    gap: 19px;
+    /* margin-top: 10px; */
+  }
+  .levels {
+    height: 9.6px;
+    width: 120px;
+    border-radius: 12px;
+    background-color: var(--gray);
+  }
+  .level-skill {
+    height: 9.6px;
+    width: 92%;
+    border-radius: 12px;
+    background-color: var(--blue);
+  }
+  .one , .four {
+    width: 65%;
+  }
+  .two , .five {
+    width: 83%;
+  }
+
+
+  .hobbies {
+    padding: 20px;
+  }
+  .h3-hobbies {
+    font-size: 20px;
+    line-height: normal;
+    margin-bottom: 22px;
+  }
+  .h-m {
+    margin: 32px 0;
+  }
+  .hob-title {
+    font-size: 14px;
+    line-height: normal;
+    margin: 22px 0 10px;
+  }
+  .hob-description {
+    font-size: 12px;
+    line-height: normal;
+  }
+
   
+  /* -----mid rigth-----*/
+  .mid-right {
+    gap: 20px;
+  }
+  .blog {
+    padding: 20px 0 20px 20px;
+  }
+  .blog-top {
+    gap: 20px;
+    margin-bottom: 30px;
+  }
+  .blog-span {
+    font-size: 12px;
+    line-height: normal;
+  }
+  .h3-blog {
+    font-size: 20px;
+    line-height: normal;
+    max-width: 136px;
+    margin-top: 17px;
+  }
+  .blog-img {
+    max-width: 180px;
+    width: 100%;
+    margin-top: 12px;
+  }
+  .blog-description{
+    font-size: 12px;
+    line-height: normal;
+    max-width: 320px;
+  }
+  .blogdes-two {
+    margin: 15px 0 40px;
+  }
+  .blog-link {
+    font-size: 12px;
+  }
+  
+  .expeciences {
+    border-radius: 12px;
+    padding: 17px 31.23px 38px 31.23px;
+    background-color: var(--white);
+  }
+  .h3-experiences {
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 29.26px;
+    color: var(--other-text);
+    margin-bottom: 44px;
+  }
+  .exp {
+    display: flex;
+    gap: 22.71px;
+  }
+  .xp-two {
+    margin-top: 55.5px;
+  }
+  .exp-img {
+    height: 84px;
+    width: 119.25px;
+  }
+  
+  .date {
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 17.07px;
+    color: var(--secundary-text);
+  }
+  .job {
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 19.5px;
+    color: var(--other-text);
+    margin: 12px 0 33px;
+  }
+  .job-desc {
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 19.5px;
+    max-width: 387.57px;
+    color: var(--secundary-text);
+  }
+  
+
+
+
+
+
+
+  /* bot */
+  .card-projects {
+    margin: 20px 0;
+  }
 }
