--- a/css/styles.css
+++ b/css/styles.css
@@ -410,9 +410,16 @@ h2 {
   color: var(--white);
   background-color: var(--blue);
 }
+.cd-blue:hover {
+  background-color: #2f81ed81;
+}
 .cd-white {
   border: 1px solid var(--blue);
   color: var(--blue);
+}
+.cd-white:hover {
+  border-color: #2f81ed81;
+  color: #2f81ed81;
 }
 
 .page-div {
@@ -720,7 +727,7 @@ h2 {
     padding: 18px 18.49px 33px;
   }
   .img-project {
-    max-width: 150px;
+    max-width: 170px;
     width: 100%;
     border-radius: 12px;
   }
@@ -763,4 +770,45 @@ h2 {
     background-color: var(--blue);
     border: 1px solid var(--blue);
   }
+}
+
+@media screen  and (max-width: 718px){
+  body {
+    padding: 0 10px;
+  }
+  .profile-card {
+    flex-direction: column;
+    align-items: center;
+    max-width: 320px;
+  }
+  .image-profile {
+    max-width: 275px;
+  }
+  .profile-right {
+    max-width: 275px;
+  }
+  .profile-tight-top {
+    flex-direction: column;
+    gap: 10px;
+  }
+
+
+  .mid {
+    flex-direction: column;
+    align-items: center;
+    max-width: 320px;
+  }
+  .bot {
+    /* display: none; */
+    align-items: center;
+    max-width: 320px;
+  }
+  .card-projects {
+    flex-direction: column;
+    gap: 20px;
+  }
+  .card {
+    align-items: center;
+  }
+  
 }
